# platform.core.api.mediamuxer

./: AUTHORS  CMakeLists.txt  capi-mediamuxer.pc.in  checkpatchinit_tizen.sh  checkpatchinit_tizen_h.sh
doc/: mediamuxer_doc.h
include/: mediamuxer.h  mediamuxer_error.h  mediamuxer_ini.h  mediamuxer_port.h  mediamuxer_private.h  mediamuxer_util.h
include/port_custom/: mediamuxer_port_custom.h
include/port_ffmpeg/: mediamuxer_port_ffmpeg.h
include/port_gst/: mediamuxer_port_gst.h
packaging/: capi-mediamuxer.spec
src/: CMakeLists.txt  mediamuxer.c  mediamuxer_ini.c  mediamuxer_port.c
src/port_custom/: mediamuxer_port_custom.c
src/port_ffmpeg/: mediamuxer_port_ffmpeg.c
src/port_gst/: mediamuxer_port_gst.c
test/: CMakeLists.txt  mediamuxer_test.c  mediamuxer_test_gst.c  mediamuxer_test_with_demuxer.c  mediamuxer_test_with_mediacodec.c
